<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuestDen Blick Reader</string>
    <string name="preference_file_key">de.dediggefedde.questden_blick_reader.PREFERENCE_FILE_KEY</string>
    <string name="author">Author</string>
    <string name="wBut_watched">Watched</string>
    <string name="wBut_watch">Watch</string>
    <string name="title">Title</string>
    <string name="summary">Summary</string>
    <string name="NewPosts">New Posts: %d</string>
    <string name="NewImg">New Img: %d</string>
    <string name="NewCompPosts">P: %d</string>
    <string name="NewCOMPImg">I: %d</string>
    <string name="open_menu">Opens the Menu</string>
    <string name="closesMenu">Closes the Menu</string>
    <string name="btn_update">Update</string>
    <string name="nav_pages_Watch">Watch</string>
    <string name="nav_pages_title">Boards</string>
    <string name="nav_pages_draw">Draw</string>
    <string name="nav_pages_general">General</string>
    <string name="nav_pages_quest">Quest</string>
    <string name="nav_pages_questdis">Questdis</string>
    <string name="nav_pages_tg">Tg</string>
    <string name="nav_special_title">Synchronizaton</string>
    <string name="nav_watchlist_open">Watch List</string>
    <string name="nav_reader_settings">Settings</string>
    <string name="list_placeholder_newImgCnt">New Img: 0</string>
    <string name="list_placeholder_watch">Watch</string>
    <string name="list_placeholder_NewPostsCnt">New Posts: 0</string>
    <string name="list_placeholder_ID">968318</string>
    <string name="slist_placeholder_newImgCnt">I: 0</string>
    <string name="slist_placeholder_watch">W</string>
    <string name="slist_placeholder_newPostsCnt">P: 0</string>
    <string name="slist_placeholder_ID">968318</string>
    <string name="slist_img_descr">Thread/Post Image</string>
    <string name="list_img_descr">Thread/Post Image</string>
    <string name="menu_sort_date">Sort by Date</string>
    <string name="menu_sort_postCnt">Sort by New Posts</string>
    <string name="menu_sort_ImgCnt">Sort by New Images</string>
    <string name="menu_sort_jump30">Jump to 30</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_img_desc">header image</string>
    <string name="img_zoom_desc">Zooming post image to fullscreen</string>
    <string name="Bot_Nav_first"><![CDATA[<<]]></string>
    <string name="Bot_Nav_prev"><![CDATA[<]]></string>
    <string name="Bot_Nav_next"><![CDATA[>]]></string>
    <string name="Bot_Nav_Last"><![CDATA[>>]]></string>
    <string name="nav_watchlist">Watch List</string>
    <string name="nav_watchlist_update">Update</string>
    <string name="menu_reader_sync">Sync with Server</string>
    <string name="CurPos">%s %d/%d</string>
    <string name="increaseFont">A+</string>
    <string name="SFWQuestion">SFW?</string>
    <string name="SFW">SFW</string>
    <string name="NSFW">NSFW</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sync">Sync with BLICK</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="NotLoggedIn">Not logged in.</string>
    <string name="LoggedIn">Logged in!</string>
    <string name="NotVerified">Account not verified!</string>
    <string name="LoginError">Login-Error.</string>
    <string name="ErrorReachingServer">Error Reaching Server…\n%s\n%s</string>
    <string name="SyncName">Name</string>
    <string name="SyncPW">Password</string>
    <string name="SyncStatus">status</string>
    <string name="SyncLogin">Login</string>
    <string name="SyncDownload">download</string>
    <string name="SyncUpload">Upload</string>
    <string name="main_position">Image:\n1/100</string>
    <string name="main_btnOnlyPics_descr">Show Only Pictures</string>
    <string name="symb_decFont">A-</string>
    <string name="example_date">20/08/21 17:05</string>
    <string name="example_text" tools:ignore="Typos">asd asd asd asd asda dassadas asa dsadsa αβζ ΔΦ さsd asda dassadas asa dsadsa αβζ ΔΦ さ よなら 私の手元にdasd asd\nasd 1li</string>
    <string name="LogOut">Log Out</string>
    <string name="title_activity_syncCompare">Sync Overview</string>
    <string name="localRmoteCompare">Local: %s items\nRemote: %s items</string>
    <string name="backup">Save Backup</string>
    <string name="restore">Load Backup</string>
    <string name="firstCreateEntry">Please create an entry first using the userscript</string>
    <string name="Loggedout">Logged out.</string>
    <string name="sync_disabled_warning">You disabled synchronizing the watchbar!</string>
    <string name="btn_offline">offline</string>
    <string name="btn_downloaded">Downloaded</string>
    <string name="open_appearance_menu">Open Appearance menu</string>
    <string name="update_page">Update Page</string>
    <string name="special">Special</string>
    <string name="downloaded">Downloaded</string>
    <string name="increase_font_size">Increase Font Size</string>
    <string name="decrease_font_size">Decrease Font Size</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="delete">Delete</string>
    <string name="downloaded_of_images">Downloaded %1$d of %2$d images</string>
    <string name="all_images_downloaded">All images downloaded!</string>
    <string name="there_was_an_error">There was an error: %1$s</string>
    <string name="posts">%1$s Posts</string>
    <string name="save_login_data">Save Login Data</string>
    <string name="watched_threads_imported">%1$d watched threads imported!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_for_logging_in">Password for logging in</string>
    <string name="username">Username</string>
    <string name="wrong_username_or_password">Wrong username or password!</string>
    <string name="delete_reading_status">Delete Reading Status</string>
    <string name="delete_offline_data">Delete Offline Data</string>
    <string name="delete_watchlist">Delete Watchlist</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="register_account">Register Account</string>
    <string name="introduction">Introduction</string>
    <string name="reply">Reply</string>
    <string name="change_post_mode">Change post mode</string>
    <string name="increase_font_sizebtn">Increase font size</string>
    <string name="decrease_font_sizebtn">Decrease font size</string>
    <string name="change_image_mode">Change image mode</string>
    <string name="download_thread">Download thread</string>
    <string name="watch_thread">watch thread</string>
    <string name="open_chapter_overview">Open chapter overview</string>
    <string name="quest_archive">Quest Archive</string>
    <string name="logout">Logout</string>
    <string name="welcomelogin">Welcome %1$s</string>
    <string name="login">Login</string>
    <string name="login_to_server">Login to Server</string>
    <string name="an_error_occured">An Error Occured!</string>
    <string name="error_message_goes_here">Error message goes here</string>
    <string name="cancel">Cancel</string>
    <string name="send_only_error">Send\nonly error</string>
    <string name="send_with_data">Send\nwith data</string>
</resources>