<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">
    <item android:title="@string/nav_pages_title">
        <menu>
            <item
                android:id="@+id/menu_watch_open"
                android:title="@string/nav_watchlist_open"
                />
            <item
                android:id="@+id/menu_draw"
                android:title="@string/nav_pages_draw"/>
            <item
                android:id="@+id/menu_general"
                android:title="@string/nav_pages_general"/>
            <item
                android:id="@+id/menu_quest"
                android:title="@string/nav_pages_quest"/>
            <item
                android:id="@+id/menu_questdis"
                android:title="@string/nav_pages_questdis"/>
            <item
                android:id="@+id/menu_tg"
                android:title="@string/nav_pages_tg"/>
        </menu>
    </item>
    <item android:title="@string/nav_special_title" android:id="@+id/menu_reader">
        <menu>
<!--            <item-->
<!--                android:id="@+id/menu_reader_settings"-->
<!--                android:title="@string/nav_reader_settings"/>-->
            <item
                android:id="@+id/menu_reader_sync"
                android:title="@string/menu_reader_sync"/>
            <item
                android:id="@+id/menu_reader_backup"
                android:title="@string/backup"/>
            <item
                android:id="@+id/menu_reader_restore"
                android:title="@string/restore"/>
        </menu>
    </item>
</menu>