<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_deleting">
    <item
        android:id="@+id/menu_reply"
        android:title="@string/reply"
        />
    <item
        android:id="@+id/menu_delete_reading"
        android:title="@string/delete_reading_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_offline"
        android:title="@string/delete_offline_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_clear_form"
        android:title="Clear Form"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_Watch"
        android:title="@string/delete_watchlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_intro"
        android:title="@string/introduction"
        />
    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        />
    <item
        android:id="@+id/menu_license"
        android:title="@string/license"
        />
</menu>