<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <de.dediggefedde.questden_blick_reader.CustomRecyclerView
        android:id="@+id/post_list_rec_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageZoom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#a000"
        android:contentDescription="@string/img_zoom_desc"
        app:layout_constraintBottom_toBottomOf="@+id/tool_dropout"
        app:layout_constraintEnd_toEndOf="@+id/post_list_rec_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/post_list_rec_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_questden" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <ProgressBar
        android:id="@+id/progressBarDet"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:max="100"
        android:progress="10"
        android:progressDrawable="@drawable/circle"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarUndet"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:max="100"
        android:progress="50"
        android:rotation="-90"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_navigation_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tool_dropout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/btn_openFont"
            style="@style/ImgButtonStyle"
            android:contentDescription="@string/open_appearance_menu"
            app:srcCompat="@drawable/fontmenudrop"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_first"
            style="@style/NavigationButtonStyle"
            android:text="@string/Bot_Nav_first" />

        <Button
            android:id="@+id/btn_prev"
            style="@style/NavigationButtonStyle"
            android:text="@string/Bot_Nav_prev" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tx_position"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_position"
            android:textSize="15sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_next"
            style="@style/NavigationButtonStyle"
            android:text="@string/Bot_Nav_next" />

        <Button
            android:id="@+id/btn_last"
            style="@style/NavigationButtonStyle"
            android:text="@string/Bot_Nav_Last" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_update"
            style="@style/ImgButtonStyle"
            android:contentDescription="@string/update_page"
            app:srcCompat="@drawable/refresh"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tx_img_path"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_imgPath_bg"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_list_rec_view"
        tools:visibility="gone" />


    <LinearLayout
        android:id="@+id/tool_dropout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_navigation_bg"
        android:gravity="start"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        >

        <ImageButton
            android:id="@+id/btn_only_pics"
            style="@style/ImgButtonStyle"
            android:contentDescription="@string/main_btnOnlyPics_descr"
            app:srcCompat="@drawable/ic_inclnonimg"/>

        <ImageButton
            android:id="@+id/btn_incFont"
            style="@style/ImgButtonStyle"
            android:contentDescription="@string/increase_font_size"
            app:srcCompat="@drawable/aplus"
            />

        <ImageButton
            android:id="@+id/btn_decFont"
            style="@style/ImgButtonStyle"
            android:contentDescription="@string/decrease_font_size"
            app:srcCompat="@drawable/aminus"
            />

        <Button
            android:id="@+id/btn_toggleSFW"
            style="@style/ImgButtonStyle"
            android:layout_width="wrap_content"
            android:text="@string/SFWQuestion" />

        <ImageButton
            android:id="@+id/btn_offline"
            style="@style/ImgButtonStyle"
            android:contentDescription="@string/offline_mode"
            app:srcCompat="@drawable/offline"
            />
        <ImageButton
            android:id="@+id/btn_watch"
            style="@style/ImgButtonStyle"
            android:contentDescription="@string/offline_mode"
            app:srcCompat="@drawable/eye_closed"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/post_list_rec_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        />
    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#afff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        android:visibility="gone"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>