<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_comp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="5dp"
    android:background="#F0E0D6"
    android:padding="5dp">

    <TextView
        android:id="@+id/tx_comp_newImg"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/slist_placeholder_newImgCnt"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tx_comp_newPosts"
        app:layout_constraintTop_toTopOf="@+id/tx_comp_newPosts" />

    <TextView
        android:id="@+id/tx_comp_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/title"
        android:textColor="#CC1105"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tx_comp_postID"
        app:layout_constraintStart_toStartOf="@id/barrier2_comp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginLeft="5dp" />

    <ImageView
        android:id="@+id/img_comp_url"
        android:layout_width="75dp"
        android:layout_height="21dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/slist_img_descr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barrier2_comp
"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tx_comp_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/author"
        android:textColor="#117743"
        app:layout_constraintEnd_toStartOf="@+id/tx_comp_date"
        app:layout_constraintStart_toStartOf="@+id/barrier2_comp"
        app:layout_constraintTop_toBottomOf="@+id/tx_comp_title" />

    <TextView
        android:id="@+id/tx_comp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20/08/21 17:05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_comp_postID" />

    <TextView
        android:id="@+id/tx_comp_watch"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#20E91E63"
        android:gravity="center"
        android:text="@string/slist_placeholder_watch"
        android:textColor="#A52B23"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_comp_url" />

    <TextView
        android:id="@+id/tx_comp_newPosts"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/slist_placeholder_newPostsCnt"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tx_comp_watch"
        app:layout_constraintTop_toTopOf="@+id/tx_comp_watch" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tx_comp_newPosts,img_comp_url,tx_comp_newImg,tx_comp_watch"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/tx_comp_postID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slist_placeholder_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
