<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="5dp"
    android:background="#F0E0D6"
    android:padding="5dp">

    <TextView
        android:id="@+id/tx_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20/08/21 17:05"
        android:textColor="#1B6FA6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_postID" />

    <TextView
        android:id="@+id/tx_newImg"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/list_placeholder_newImgCnt"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_newPosts" />

    <TextView
        android:id="@+id/tx_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/title"
        android:textColor="#CC1105"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/barrier5"
        app:layout_constraintStart_toStartOf="@id/barrier2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tx_Summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/summary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier2"
        app:layout_constraintTop_toTopOf="@+id/barrier4"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_url"
        android:layout_width="72dp"
        android:layout_height="39dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/list_img_descr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/barrier2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tx_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/author"
        android:textColor="#117743"
        app:layout_constraintEnd_toStartOf="@+id/barrier5"
        app:layout_constraintStart_toStartOf="@+id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/tx_title"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tx_watch"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#20E91E63"
        android:gravity="center"
        android:text="@string/list_placeholder_watch"
        android:textColor="#A52B23"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_url" />

    <TextView
        android:id="@+id/tx_newPosts"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/list_placeholder_NewPostsCnt"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_watch" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tx_newPosts,img_url,tx_newImg,tx_watch"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/tx_postID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_placeholder_ID"
        android:textColor="#1B6FA6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tx_title,tx_author,tx_postID,tx_date" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        app:constraint_referenced_ids="tx_postID,tx_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

</androidx.constraintlayout.widget.ConstraintLayout>
